--- a/1 Python Basics/1.2 Types.md
+++ b/1 Python Basics/1.2 Types.md
@@ -1,24 +1,31 @@
 *[Back to index](<..\readme.md>)*
-
-**Types**
+___
+### Types
 
 *A type is how Python represents different types of data.*
 
 Python is an object-oriented language. There are many different types of objects in Python, some of the most common objects are integers (`int`), strings (`str`) floats (`float`) and boolean (`bool`). The data type in Python can be determined using the type command. For example:
 ```python
-type(38)
-type(1.6)
-type("Catepillar")
-type(True)
+## Declare Variables of different types 
+age = 38
+height = 1.6
+name = "Amanda"
+check = True
+
+print ("Name: ", name, type(name))
+print ("Height: ", height, type(height))
+print ("Age: ", age, type(age))
+print ("Check: ", check, type(check))
 ```
 
 Will render:
 ```
-class 'int'
-class 'float'
-class 'str'
-class 'bool'
+Name:  Amanda <class 'str'>
+Height:  1.6 <class 'float'>
+Age:  38 <class 'int'>
+Check:  True <class 'bool'>
 ```
+*See [Expressions and Variables](x1.3%20Expressions%20and%20Variables.md#variables-from-user-input) for information on variables*
 
 * Integers: The set of real numbers with no decimal or fraction; -1, 2, 1000 etc
 * Floats: Numbers that contain a decimal; 1.5, 3.14, 166.456 etc
@@ -26,7 +33,7 @@ class 'bool'
 * Boolean: A data type that can only have one of two possible values, most commonly True/False (Note: case is important)
 
 There are some limitations when it comes to machines representing real numbers, but floating point numbers are a good representation in most cases. The specifics of floats for a given runtime environment can be checked using `sys.float_info`. This will also show the largest and smallest number that can be represented with them (*Note: `sys` must be imported first*).
-
+___
 ### Type Casting
 Expression types can be changed in python, this is called type casting. the integer 2 can be cast to a float as follows:
 ```python
@@ -56,7 +63,7 @@ float, we will get a 1. If we cast a Boolean false to an integer or
 float, we get a zero. If you cast a 1 to a Boolean, you get a true.
 Similarly, if you cast a 0 to a Boolean, you get a false.
 Check the labs for more examples or check Python.org for other kinds of types in Python.*
-
+___
 ### Advanced Type Casting
 There are more advanced ways to do type-casting, for example, taking an [input](/ "Needs doing") (which is aways a string), and casting it to an integer; however the input type must be explained and [error handling](/ "Needs doing") is a very good idea.  
 For example:
