Up to 1.3 complete. + final format updates.

--- a/1 Python Basics/1.2 Types.md
+++ b/1 Python Basics/1.2 Types.md
@@ -4,7 +4,10 @@ ___
 
 *A type is how Python represents different types of data.*
 
-Python is an object-oriented language. There are many different types of objects in Python, some of the most common objects are integers (`int`), strings (`str`) floats (`float`) and boolean (`bool`). The data type in Python can be determined using the type command. For example:
+Python is an object-oriented language. There are many different types of objects in Python, some of the most common objects are integers (`int`), strings (`str`) floats (`float`) and boolean (`bool`). The data type in Python can be determined using the type command.
+
+<details><summary>Variable Types</summary>
+
 ```python
 ## Declare Variables of different types 
 age = 38
@@ -17,40 +20,50 @@ print ("Height: ", height, type(height))
 print ("Age: ", age, type(age))
 print ("Check: ", check, type(check))
 ```
+</details>
 
-Will render:
+Will output:
 ```
 Name:  Amanda <class 'str'>
 Height:  1.6 <class 'float'>
 Age:  38 <class 'int'>
 Check:  True <class 'bool'>
 ```
-*See [Expressions and Variables](x1.3%20Expressions%20and%20Variables.md#variables-from-user-input) for information on variables*
+*See [Expressions and Variables](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) for information on variables*
 
-* Integers: The set of real numbers with no decimal or fraction; -1, 2, 1000 etc
-* Floats: Numbers that contain a decimal; 1.5, 3.14, 166.456 etc
-* Strings: A Sequence of characters that can include letters, numbers or symbols; "This is a sring, 33 !"
-* Boolean: A data type that can only have one of two possible values, most commonly True/False (Note: case is important)
+* **Integers:** The set of real numbers with no decimal or fraction; -1, 2, 1000 etc
+* **Floats:** Numbers that contain a decimal; 1.5, 3.14, 166.456 etc
+* **Strings:** A Sequence of characters that can include letters, numbers or symbols; "This is a sring, 33 !"
+* **Boolean:** A data type that can only have one of two possible values, most commonly True/False (Note: case is important)
 
 There are some limitations when it comes to machines representing real numbers, but floating point numbers are a good representation in most cases. The specifics of floats for a given runtime environment can be checked using `sys.float_info`. This will also show the largest and smallest number that can be represented with them (*Note: `sys` must be imported first*).
 ___
 ### Type Casting
 Expression types can be changed in python, this is called type casting. the integer 2 can be cast to a float as follows:
+
+<details><summary>Cast Integer to Float</summary>
+
 ```python
 float(2)
 ```
-Which will render:
+</details>
+
+Will output:
 ```
 2.0
 ```
 Note that when casting a float to an integer, information can be lost; for example casting 1.1 to an integer will result in 1.
 
 If a string contains an integer value, it can be converted to a float or int; however this is only possible if the string contains only numerical characters; for example
+<details><summary>Cast String to Integer or Float</summary>
+
 ```python
 int('1')
 float('1.2')
 ```
-Will render:
+</details>
+
+Will output:
 ```
 1
 1.2
@@ -58,16 +71,17 @@ Will render:
 
 While `int(1 and some text)` would result in an error.
 
-Boolean can be cast o an integer or float; If a Boolean True is cast to an integer or float it will result in `1` or `1.0`. Simialarly to an integer or
-float, we will get a 1. If we cast a Boolean false to an integer or
-float, we get a zero. If you cast a 1 to a Boolean, you get a true.
-Similarly, if you cast a 0 to a Boolean, you get a false.
-Check the labs for more examples or check Python.org for other kinds of types in Python.*
+Boolean can be cast to an integer or float.  
+If a Boolean True is cast to an integer or float it will result in `1` or `1.0`.  
+If a Boolean false is cast to an integer or float it will result in `0` or `0.0`. 
+Similarly a `1`/`0` cast to boolean will result in `True`/`False` respectively.
+
 ___
 ### Advanced Type Casting
-There are more advanced ways to do type-casting, for example, taking an [input](/ "Needs doing") (which is aways a string), and casting it to an integer; however the input type must be explained and [error handling](/ "Needs doing") is a very good idea.  
-For example:
+There are more advanced ways to do type casting, for example, taking an [input](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) (which is aways a string), and casting it to an integer; however the required input type should be made clear to the user and [exception handling *Needs Update 3.5](/x3%20Python%20Programming%20Fundamentals/x3.5%20Exception%20Handling.md) is a very good idea.  
+<details><summary>Cast User Input to Integer</summary>
+
 ```py
 age = int(input("Enter your age: "))
 ```
-*More about user input in [Expressions and Variables](x1.3%20Expressions%20and%20Variables.md)
+</details>
