--- a/1 Python Basics/1.3 Expressions and Variables.md
+++ b/1 Python Basics/1.3 Expressions and Variables.md
@@ -3,33 +3,46 @@ ___
 ### Variables
 *Variables are used to store values.*  
 
-The value `1` can be assigned to the variable `my_variable` using the assinment operator (equals sign): 
+The value `1` can be assigned to the variable `my_variable` using the assinment operator (equals sign)
+<details><summary>Assign variable</summary>
+
 ```py
 my_variable = 1
 ```
+</details><p></p>
 
-Variables can be the result of [expressions](#expressions) such as: 
+Variables can be the result of [expressions](#expressions)
+<details><summary>Expression variable</summary>
+
 ```py
 my_variable = 43 + 60 + 16 + 41
 ```
+</details><p></p>
 
-We can perform operations on variables and save the result to a new variable:  
+Operations can be performed on variables the result saved to a new variable
+<details><summary>New variable from operation on variable</summary>
+
 ```py
 # Use another variable to store the result of the operation between variable and value 
 y = x / 60
 ```
+</details><p></p>
 
-
-If a value is saved to an existing variable; the new value will overwrite the previous value:  
+If a value is saved to an existing variable; the new value will overwrite the previous value
+  <details><summary>Overwrite variable</summary>
 ```py
 my_variable = my_variable / 60
 print(my_variable)
 ```
+</details><p></p>
 
 *It's good practice to use meaningful variable names, to improve code readability and maintainability*
+
 ___
 ### Variables from user input
-Variables can be derived from a user input. All variables can then be used elsewhere by recalling the (exact) name of the variable:
+Variables can be derived from a user input. All variables can then be used elsewhere by recalling the (exact) name of the variable
+<details><summary>request and print variable from user input</summary>
+
 ```python
 # Request User input
 name = input("Hi, What's your name? ")
@@ -38,8 +51,9 @@ name = input("Hi, What's your name? ")
 print ("Hi",name,"it's nice to meet you, I hope you're having a nice day :)")
 ```
 [Code](<../XXCode Snips/1.3.1 Variables from user input.py>)
+</details><p></p>
 
-Output:
+Will output:  
 ```
 Hi, What's your name? Amanda
 Hi Amanda it's nice to meet you, I hope you're having a nice day :)
@@ -47,7 +61,7 @@ Hi Amanda it's nice to meet you, I hope you're having a nice day :)
 
 *In Python, variables derived from the `input()` function are treated as a string by default.*  
 
-If you're comparing the input to numerical values, you need to convert the input to an integer using the `int()` function. See [Type Casting](1.2%20Types.md#type-casting) for more information.  
+If comparing a user input variable to numerical values, the input must be converted to an integer using the `int()` function. See [Type Casting](1.2%20Types.md#advanced-type-casting) for more information.  
  
 <details><summary><i>See below for an illustration of what happens if input variables are not correctly converted</i></summary>
 
@@ -65,11 +79,12 @@ elif 18 <= age <= 65:
 else:
     print("You are a senior citizen.")
 ```
-In this case, age is a string, when attempting to compare it with integers using `<=` Python throws an error.
+In this case, age is a string. When attempting to compare it with integers using  the `<=` operator, Python throws an error.
 
-To fix this, convert age to an integer:  
+To fix this, `age` must be coverted to an integer:  
 **Correct**  
 ```python
+# Request user input and onvert to integer
 age = int(input("Enter your age: "))
 
 # Check age range
@@ -81,7 +96,7 @@ else:
     print("You are a senior citizen.")
 ```
 
-This ensures that age is treated as an integer, allowing numerical comparisons without raising a TypeError.
+This ensures that age is treated as an integer, allowing numerical comparisons without raising a `TypeError`.  
 [Code](<../XXCode Snips/1.3.2 Type Casting User Input.py>)
 </details>
 
@@ -89,37 +104,49 @@ ___
 ### Expressions  
 *Expressions describe a type of operation that computers perform.*  
 
-Expressions in Python can include operations among compatible types (e.g. integers and floats). For example, basic arithmetic operations:  
-*Addition operation expression*  
+Expressions in Python can include operations among compatible types (e.g. integers and floats). For example, basic arithmetic operations  
+<details><summary>Addition operation expression</summary>
+
 `43 + 60 + 16 + 41`  
+</details>
 
-
-*Subtraction operation expression*  
+<details><summary>Subtraction operation expression</summary>
+ 
 `50 - 60`  
- 
-*Multiplication operation expression*  
+</details>
+
+<details><summary>Multiplication operation expression</summary>
+
 `5 * 5`  
- 
-*Division operation expression*   
+</details>
+
+<details><summary>Division operation expression</summary>
+
 `25 / 5`  
+</details><p></p>
 
 We can use the double slash for integer division, where the result is rounded down to the nearest integer:  
-*Integer division operation expression*  
+<details><summary>Integer division operation expression</summary>
+
 `25 // 4`  
+</details><p></p>
 
 Python follows mathematical conventions when performing mathematical expressions (*BODMAS*).  
 
 ___
 ### Modulo  
-The % operator in Python is called the modulo operator. It returns the remainder of the division of the left operand by the right operand. For example `3 % 2` will return "1".
+The `%` operator in Python is called the modulo operator. It returns the remainder of the division of the left operand by the right operand. For example `3 % 2` will return "1".
 
 A common context in which this is used is checking for odd or even numbers, the modulo operator is used to check if a number is divisible by 2.
+<details><summary>Use modulo to test odd or even</summary>
+
 ```py
 if number % 2 != 0: # Will return True if the number is odd
 ```
+</details><p></p>
 
 [Code](<../XXCode Snips/1.3.3 Even or Odd.py>)  
-*See [Loops](3.2 Loops.md) for loop information.*  
+*See [Loops *Needs update 3.2](/x3%20Python%20Programming%20Fundamentals/x3.2%20Loops.md) for loop information.*  
 
 ___
 ### Expressions and Variables Excercises:  
@@ -134,7 +161,7 @@ Excercise 1:
 # Or 
 160//60
 ```
-</details>
+</details><p></p>
 
 Excercise 2:   
 *Create a script that performs basic operations on numbers. Declare two variables (e.g., num1 and num2), and then perform addition, subtraction, multiplication, and division. Print the results.*
@@ -160,7 +187,7 @@ print ("Product is: ", product_result)
 print ("Division is: ", division_result)
 ```
 [Code](<../XXCode Snips/1.3.4 Numerical Operations.py>) 
-</details>
+</details><p></p>
 
 Excercise 3: 
 *Create a script that takes a temperature in Celsius as user input and converts it to Fahrenheit. The conversion formula is: `F=95×C+32`  
