--- a/1 Python Basics/1.1 Hello World.md
+++ b/1 Python Basics/1.1 Hello World.md
@@ -1,4 +1,4 @@
-*[Back to index](<..\readme.md>)*
+*[Back to index](</readme.md>)*
 ___
 ### Hello World
 *Typically the first program that will be created*  
@@ -16,7 +16,7 @@ Will output:
 ```
 `Hello World`  
 ```
-[Code](<..\Code Snips\1.1.1 Hello World.py>)
+[Code](</XXCode Snips/1.1.1 Hello World.py>)
 
 Note it is good practice to comment code:
 
