--- a/1 Python Basics/1.4 String Operations.md
+++ b/1 Python Basics/1.4 String Operations.md
@@ -1,4 +1,4 @@
-*[Back to index](<..\readme.md>)*
+*[Back to index](</readme.md>)*
 ___
 ### Strings
 *Strings are sequences of characters contained within two quotes (either double or single - just be consistant!)*  
