--- a/x2 Python Data Structures/x2.1 Lists and Tuples.md
+++ b/x2 Python Data Structures/x2.1 Lists and Tuples.md
@@ -1,9 +1,7 @@
 ### 2.1 **Lists and Tuples**
 
 
-### Objectives
-
-After completing this lab you will be able to:
+### Objectiveso:
 
 *  Perform list operations in Python, including indexing, list manipulation, and copy/clone list.
 
