--- a/x2 Python Data Structures/x2.1 Lists and Tuples.md
+++ b/x2 Python Data Structures/x2.1 Lists and Tuples.md
@@ -1,7 +1,15 @@
-### 2.1 **Lists and Tuples**
+## 2.1 **Lists and Tuples**
+*Lists are mutable and can be changed. Tuples are fixed.*
+
+Both lists and tuples are ordered data types (can be iterated over), are sequential, can contain multiple [types](/1%20Python%20Basics/1.2%20Types.md) and can be accessed via an index reference. Both are compound data types - data made up of multiple values or data types.  
+
+The main difference between the two is that lists can be modified, whereas tuples cannot. This makes lists more flexible, however tuples are more memory efficient, making them the better option wehre the data will not need to change.
 
 
-### Objectiveso:
+___
+## Lists
+
+### Objectives:
 
 *  Perform list operations in Python, including indexing, list manipulation, and copy/clone list.
 
@@ -16,8 +24,6 @@
   </ul>
 <li>Quiz on Lists</li>
 
-___
-### Lists
 
 These are called compound data types and are one of the key types of data structures in Python.
 
@@ -300,7 +306,7 @@ A + B
 </details>
 
 ___
-### Tuples
+## Tuples
 
 *These are called compound data types and are one of the key types of data structures in Python.
 Tuples Tuples are an ordered sequence.
@@ -366,18 +372,14 @@ We can access different characters in the string or various elements in the seco
 contained in the first.*
 
 
-## Objectives
+### Objectives
 
 After completing this lab you will be able to:
 
 * Perform the basics tuple operations in Python, including indexing, slicing and sorting
 
-<h2>Table of Contents</h2>
-<div class="alert alert-block alert-info" style="margin-top: 20px">
+Table of Contents
     <ul>
-        <li>
-            <a href="#dataset">About the Dataset</a>
-        </li>
         <li>
             <a href="#tuple">Tuples</a>
             <ul>
@@ -390,10 +392,6 @@ After completing this lab you will be able to:
             <a href="#escape">Quiz on Tuples</a>
         </li>
     </ul>
- 
-</div>
-
-<hr>
 
 In Python, there are different data types: string, integer, and float. These data types can all be contained in a tuple as follows:
 
